2005-06-06  Lars Clausen  <lars@raeder.dk>

	* app/diagram.c: 
	* app/modify_tool.c:
	* app/textedit.[ch]:
	Better support for text edit highlight.

	* app/connectionpoint_ops.c (connectionpoint_draw): Stop making
	the mainpoint extra visible.

2005-06-02  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class_dialog.c:
	* objects/UML/class.[ch]:
	The final fixes for mainpoint on UML Class.

	* sheets/cisco*.in, shapes/Cisco/*: New set of Cisco icons from
	Ian Redfern, now in color and with mainpoints!  Very pretty!

2005-06-02  Hans Breuer  <hans@breuer.org>

	* objects/UML/class_dialog.c : the memory managment with respect to
	attribute/operation connections was/is a mess. But it should work again ;)

	* samples/UMLPackages.dia samples/Composite-Action.dia : some diagrams
	directly from the UML Specification - to show the power of Dia and 
	some weakness. Watch the bug reports following ;)

2005-06-01  Hans Breuer  <hans@breuer.org>

	* app/dia.def : export diagram_update_connections_object
	* plug-ins/python/pydia-diagram.c : wrap diagram_update_connections_object
	Patch from Paolo Bernardi, together with the property setting closes bug #300572

2005-06-01  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/pydia-property.c : complete refactoring of property 
	setting, now also supports setting of property arrays
	* plug-ins/python/pydia-*.c plug-ins/python/diamodule.c : adapt to 
	Python namespacing conventions
	* plug-ins/python/pydiadoc.py : use the stuff above to produce more 
	complete UML Classes with attributes and operations
	* plug-ins/python/otypes.py : now also show the properties of the objects

	* objects/UML/class.c(umlclass_set_props) : need to update object::connections
	(pointers), they might be changed with attributes and opertions changing

	* plug-ins/python/pydia-property.c : PointArray and BezPointArray property getters
	were broken. Apparently noone used them before.
